
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct snd_soc_component {int dev; } ;
struct cs35l33_private {int amp_cal; int regmap; struct snd_soc_component* component; } ;
typedef int irqreturn_t ;


 unsigned int CS35L33_ALIVE_ERR ;
 int CS35L33_AMP_CTL ;
 unsigned int CS35L33_AMP_SHORT ;
 int CS35L33_AMP_SHORT_RLS ;
 unsigned int CS35L33_CAL_ERR ;
 int CS35L33_CAL_ERR_RLS ;
 unsigned int CS35L33_IMON_OVFL ;
 int CS35L33_INT_MASK_1 ;
 int CS35L33_INT_MASK_2 ;
 int CS35L33_INT_STATUS_1 ;
 int CS35L33_INT_STATUS_2 ;
 unsigned int CS35L33_MCLK_ERR ;
 unsigned int CS35L33_OTE ;
 int CS35L33_OTE_RLS ;
 unsigned int CS35L33_OTW ;
 int CS35L33_OTW_RLS ;
 unsigned int CS35L33_VMON_OVFL ;
 unsigned int CS35L33_VPMON_OVFL ;
 int IRQ_HANDLED ;
 int IRQ_NONE ;
 int dev_crit (int ,char*) ;
 int dev_dbg (int ,char*) ;
 int dev_err (int ,char*) ;
 int regmap_read (int ,int ,unsigned int*) ;
 int regmap_update_bits (int ,int ,int ,int ) ;

__attribute__((used)) static irqreturn_t cs35l33_irq_thread(int irq, void *data)
{
 struct cs35l33_private *cs35l33 = data;
 struct snd_soc_component *component = cs35l33->component;
 unsigned int sticky_val1, sticky_val2, current_val, mask1, mask2;

 regmap_read(cs35l33->regmap, CS35L33_INT_STATUS_2,
  &sticky_val2);
 regmap_read(cs35l33->regmap, CS35L33_INT_STATUS_1,
  &sticky_val1);
 regmap_read(cs35l33->regmap, CS35L33_INT_MASK_2, &mask2);
 regmap_read(cs35l33->regmap, CS35L33_INT_MASK_1, &mask1);




 if (!(sticky_val1 & ~mask1) && !(sticky_val2 & ~mask2))
  return IRQ_NONE;

 regmap_read(cs35l33->regmap, CS35L33_INT_STATUS_1,
  &current_val);



 if (sticky_val1 & CS35L33_AMP_SHORT) {
  dev_crit(component->dev, "Amp short error\n");
  if (!(current_val & CS35L33_AMP_SHORT)) {
   dev_dbg(component->dev,
    "Amp short error release\n");
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL,
    CS35L33_AMP_SHORT_RLS, 0);
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL,
    CS35L33_AMP_SHORT_RLS,
    CS35L33_AMP_SHORT_RLS);
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL, CS35L33_AMP_SHORT_RLS,
    0);
  }
 }

 if (sticky_val1 & CS35L33_CAL_ERR) {
  dev_err(component->dev, "Cal error\n");


  cs35l33->amp_cal = 0;

  if (!(current_val & CS35L33_CAL_ERR)) {
   dev_dbg(component->dev, "Cal error release\n");
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL, CS35L33_CAL_ERR_RLS,
    0);
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL, CS35L33_CAL_ERR_RLS,
    CS35L33_CAL_ERR_RLS);
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL, CS35L33_CAL_ERR_RLS,
    0);
  }
 }

 if (sticky_val1 & CS35L33_OTE) {
  dev_crit(component->dev, "Over temperature error\n");
  if (!(current_val & CS35L33_OTE)) {
   dev_dbg(component->dev,
    "Over temperature error release\n");
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL, CS35L33_OTE_RLS, 0);
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL, CS35L33_OTE_RLS,
    CS35L33_OTE_RLS);
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL, CS35L33_OTE_RLS, 0);
  }
 }

 if (sticky_val1 & CS35L33_OTW) {
  dev_err(component->dev, "Over temperature warning\n");
  if (!(current_val & CS35L33_OTW)) {
   dev_dbg(component->dev,
    "Over temperature warning release\n");
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL, CS35L33_OTW_RLS, 0);
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL, CS35L33_OTW_RLS,
    CS35L33_OTW_RLS);
   regmap_update_bits(cs35l33->regmap,
    CS35L33_AMP_CTL, CS35L33_OTW_RLS, 0);
  }
 }
 if (CS35L33_ALIVE_ERR & sticky_val1)
  dev_err(component->dev, "ERROR: ADSPCLK Interrupt\n");

 if (CS35L33_MCLK_ERR & sticky_val1)
  dev_err(component->dev, "ERROR: MCLK Interrupt\n");

 if (CS35L33_VMON_OVFL & sticky_val2)
  dev_err(component->dev,
   "ERROR: VMON Overflow Interrupt\n");

 if (CS35L33_IMON_OVFL & sticky_val2)
  dev_err(component->dev,
   "ERROR: IMON Overflow Interrupt\n");

 if (CS35L33_VPMON_OVFL & sticky_val2)
  dev_err(component->dev,
   "ERROR: VPMON Overflow Interrupt\n");

 return IRQ_HANDLED;
}
